# money-sync-service

./: .gitignore  LICENSE  README.md  build-frontend.sh  default.nix  money-sync-service.cabal  stack.yaml
app/: Main.hs
bridge/: Main.hs
frontend/: bower.json
frontend/src/: .gitignore  Main.purs  Transactions.purs
src/: Lenses.hs  MoneySyncService.hs  Util.hs  Webhook.hs
src/MoneySyncService/: API.hs  DB.hs  Types.hs  UpdateThread.hs
src/MoneySyncService/Scrapers/: API.hs  Bofa.hs  Chase.hs  WF.hs
