name:                money-sync-service
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Karshan Sharma
maintainer:          karshan.sharma@gmail.com
copyright:           2017 Karshan Sharma
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MoneySyncService, MoneySyncService.API, MoneySyncService.DB, MoneySyncService.Types
  build-depends:       base >= 4.7 && < 5
                     , acid-state
                     , aeson
                     , clientsession
                     , lens
                     , natural-transformation
                     , protolude
                     , safecopy
                     , servant-server
                     , wai
                     , wai-middleware-auth
                     , warp
  default-language:    Haskell2010

executable money-sync-service-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , money-sync-service
  default-language:    Haskell2010
