name:                money-sync-service
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Karshan Sharma
maintainer:          karshan.sharma@gmail.com
copyright:           2017 Karshan Sharma
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MoneySyncService
                     , MoneySyncService.API
                     , MoneySyncService.DB
                     , MoneySyncService.Types
                     , MoneySyncService.UpdateThread
                     , MoneySyncService.Scrapers.API
                     , MoneySyncService.Scrapers.Chase
                     , Util
                     , Lenses
  build-depends:       base >= 4.7 && < 5
                     , acid-state
                     , aeson
                     , clientsession
                     , cereal
                     , containers
                     , either
                     , gsuite-admin-sendmail
                     , http-client
                     , http-client-tls
                     , lens
                     , memory
                     , natural-transformation
                     , protolude
                     , random
                     , safecopy
                     , servant
                     , servant-client
                     , servant-server
                     , text
                     , time
                     , wai
                     , warp
  default-language:    Haskell2010

executable money-sync-service-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wunused-imports -Wname-shadowing
  build-depends:       base
                     , money-sync-service
  default-language:    Haskell2010
